added jwt login and sign up and middlware
